# tappas

./: README.rst
apps/h15/gstreamer/basic_security_camera_streaming/configs/: encoder_config_4k_no_osd.json  encoder_config_fhd_no_osd.json  encoder_config_sink_hd.json  encoder_config_sink_sd.json  frontend_config.json  frontend_config_single_stream_4k.json  osd_fhd.json  osd_hd.json  osd_sd.json  vision_config.json  vision_config1.json  vision_config2.json
apps/h15/gstreamer/detection/configs/: denoise_analytics_frontend_config.json  encoder_config.json  frontend_config.json
core/hailo/apps/hailo15/: meson.build
core/hailo/apps/hailo15/ai_example_app/configs/: encoder_osd_sink0.json  encoder_osd_sink1.json  encoder_osd_sink2.json  frontend_config.json
core/hailo/apps/hailo15/encoder_pipelines_new_api/: encoder_appsink_tee.cpp  encoder_change_bitrate.cpp  encoder_change_framerate.cpp  encoder_change_gop.cpp  encoder_change_gop_size.cpp  encoder_change_qp.cpp  encoder_change_roi.cpp  encoder_force_keyframe.cpp  encoder_sink_4k_h264.json  encoder_sink_4k_h265.json  encoder_sink_fhd_h264.json  encoder_sink_fhd_h265.json
core/hailo/libs/postprocesses/: meson.build
core/hailo/plugins/dsp/: gsthailovideoscale.cpp
core/hailo/plugins/tracking/: gsthailotracker.cpp
core/hailo/tracking/: hailo_tracker.cpp  hailo_tracker.hpp
core/hailo/tracking/jde_tracker/: jde_tracker_update.hpp  strack.hpp
docs/installation/: manual-install.rst
downloader/config/requirements/imx8/: imx8_cascading_networks.json
scripts/build_scripts/: install_opencv.sh
(+9 files in other folders)
